# Prediccion-de-demanda-hotelera

./: .gitignore  README.md  pyproject.toml
Azure-Model-Deployment/: 0_modelo.ipynb  1_entrenador.ipynb  2_deployador.ipynb  3_score.py  4_API.ipynb
Evidence/Evidencia 2 - Data Wrangling/: modelos_Finales.ipynb
Webpage/: README.md  app.py  requirements.txt
Webpage/src/app/static/js/: dashboard_charts.js  inicio_charts.js  tailwind-config.js
Webpage/src/app/templates/: analisis.html  base.html  calidad_y_procesamiento.html  carga_de_datos.html  contacto.html  dashboard.html  inicio.html  modelado.html
