[project]
name = "tca-time-series-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-storage-blob>=12.25.1",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-caching>=2.3.1",
    "gitignore>=0.0.8",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "jinja2>=3.1.6",
    "learntools>=0.0.20",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "prophet>=1.1.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "xgboost>=3.0.0",
]
